--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ImageLingo</string>
     <string name="translate">Translate</string>
     <string name="goBack">Return</string>
+    <string name="capture_image">Capture</string>
 </resources>
