Added translation to TranslationActivity. Only Maori, and only 3 words so far.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="translate">Translate</string>
     <string name="goBack">Return</string>
     <string name="capture_image">Capture</string>
+    <string name="maori_no_translation">Maori: Translation Unavailable</string>
 </resources>
